# time-budget

./: CLAUDE.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  db.ts  timeUtils.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Calendar.tsx  CategoryManage.tsx  HelpModal.tsx  PieChart.tsx  RecordForm.tsx  RecordList.tsx  Stats.tsx  Timer.tsx
