[package]
name = "app"
version = "0.1.0"
description = "时间预算器"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
